tests/outref/TERR029.ref

-- TERR029 : OCTO502 : Test that queries with expected parse error actually error out

INSERT INTO names VALUES 7;

[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected LITERAL, expecting LEFT_PAREN
LINE 3:1: INSERT INTO names VALUES 7;
                                   ^
OCTO> INSERT INTO names VALUES 7;
OCTO> 
